<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navigationview.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.navigationview.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.navigationview.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.navigationview.ui.recyclerview.DetailFragment"
        android:label="fragment_detail"
        tools:layout="@layout/fragment_detail" />
    <fragment
        android:id="@+id/nav_editbook"
        android:name="com.example.navigationview.ui.library.EditBookFragment"
        android:label="EditBookFragment" />
    <fragment
        android:id="@+id/nav_viewpaper"
        android:name="com.example.navigationview.ui.viewpaper.ViewPaperFragment"
        android:label="ViewPaperFragment" />
    <fragment
        android:id="@+id/detail2Fragment"
        android:name="com.example.navigationview.ui.viewpaper.one.Detail2Fragment"
        android:label="Detail2Fragment" />
    <fragment
        android:id="@+id/detail3Fragment"
        android:name="com.example.navigationview.ui.viewpaper.two.Detail3Fragment"
        android:label="Detail3Fragment" />
</navigation>