<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/bookname"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/bookname"
                android:layout_width="293dp"
                android:layout_height="wrap_content"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="印记"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <AutoCompleteTextView
                android:id="@+id/isbn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <requestFocus />
            </AutoCompleteTextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="记录时间"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/publishertime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="date"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/picture"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/photo"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="145dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="记录"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/sentence"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:ems="10" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="24dp"
                android:layout_marginRight="45dp"
                android:layout_toStartOf="@+id/clear"
                android:layout_toLeftOf="@+id/clear"
                android:text="@string/save" />

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="24dp"
                android:text="@string/clear" />

            <Button
                android:id="@+id/exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="24dp"
                android:layout_toEndOf="@+id/clear"
                android:layout_toRightOf="@+id/clear"
                android:text="@string/exit" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >


        </LinearLayout>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>